fix letter spacing

--- a/compiled/app.scss
+++ b/compiled/app.scss
@@ -66,7 +66,8 @@ $lg-screen: 960px;
 *, 
 *::before, 
 *::after { 
-  box-sizing: inherit; 
+  box-sizing: inherit;
+  letter-spacing: -1px;
 }
 
 html {
@@ -165,6 +166,10 @@ body {
   font-size: 3rem;
   padding: 8%;
   line-height: 120%;
+
+  @include responsive(phones) {
+    letter-spacing: -1px;
+  }
 }
 
 body.blog-body {
